# rust-introduction

./: .gitignore  Cargo.toml  Dockerfile  README.md
app/: Cargo.toml
app/proto/: api.proto
app/src/: client.rs  main.rs  server.rs
sha256-wrapper/: Cargo.toml  build.rs
sha256-wrapper/src/: lib.rs
