[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
sha256-wrapper = { path = "../sha256-wrapper"}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
tonic = "0.6.2"
prost = "0.9.0"
clap = { version = "3.0.10", features = ["derive"] }

[build-dependencies]
tonic-build = "0.6.2"