[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
sha256-wrapper = { path = "../sha256-wrapper"}
reqwest = { version = ">=0.11", features = ["json"] }
tokio = { version = ">=1.27.0", features = ["full"] }
tokio-stream = ">=0.1.12"
serde = { version = ">=1.0", features = ["derive"] }
hex = ">=0.4.3"
tonic = ">=0.11.0"
prost = ">=0.11.9"
clap = { version = ">=4.2.1", features = ["derive"] }
log = ">=0.4.17"
env_logger = ">=0.10.0"

[build-dependencies]
tonic-build = ">=0.11.0"